--- a/benny.html
+++ b/benny.html
@@ -321,7 +321,7 @@
 </div>
 <div class="card" style="text-align: center;">
 <h2>Check Vehicle Details and Gallery</h2>
-<a class="track-btn" href="thttps://www.carvana.com/vehicle/4065934?refSource=srp">🚚 More about your Lexus</a></div>
+<a class="track-btn" href="https://www.carvana.com/vehicle/4065934?refSource=srp">🚚 More about your Lexus</a></div>
 <div class="card">
 <h2>Delivery Details</h2>
 <p><strong>Shipment Date:</strong> Awaiting payment</p>
