--- a/benny-fuentes.html
+++ b/benny-fuentes.html
@@ -291,8 +291,8 @@
 
   <header>
     <div class="logo">
-      <a href="https://www.carvanna.com" target="_blank" rel="noopener">
-        <img src="carvanna.png" alt="CarMax Logo">
+      <a href="https://www.edmunds.com" target="_blank" rel="noopener">
+        <img src="https://logodix.com/edmunds" alt="Edmunds Logo">
       </a>
     </div>
     <nav>
@@ -302,13 +302,13 @@
   </header>
 <section class="hero">
 <h1>Welcome, Benny Fuentes 🎉</h1>
-<p>Your Carvanna vehicle application approval</p>
-<p>Thank you for choosing Carvanna. Your application has been successfully received and processed.</p>
+<p>Edmunds motors gives you the cheapest and affordable cars, your Edmunds vehicle application approval</p>
+<p>Thank you for choosing Edmunds. Your application has been successfully received and processed.</p>
 </section>
 <!-- Clean order card with bottom-right badge -->
 <section class="order-card" aria-label="Order Summary Card"><img class="car-img" src="lexus_rx_1.webp" alt="2017 Volvo S90 T6 Momentum - exterior front three-quarter" />
-<div class="label-badge"><img class="badge-logo" src="carvanna.png" alt="Carvanna.com" />
-<div class="badge-down">$800 Down Payment</div>
+<div class="label-badge"><img class="badge-logo" src="https://logodix.com/edmunds" alt="Edmunds.com" />
+<div class="badge-down">$600 Down Payment</div>
 <div class="badge-down">$500 Shippment</div>
 <div class="badge-name">Lexus 2023-24</div>
 </div>
@@ -330,25 +330,25 @@
   <div class="card">
   <h2>Vehicle Information 🚗</h2>
   <p><strong>Make:</strong> Lexus</p>
-  <p><strong>Model:</strong> RX 450h+ (plug-in hybrid)</p>
+  <p><strong>Model:</strong> RX 450h+ </p>
   <p><strong>Year:</strong> 2023</p>
-  <p><strong>Exterior Color:</strong> White (Icelandic White Pearl)</p>
-  <p><strong>Interior Color:</strong> Black (Ebony)</p>
-  <p><strong>Engine:</strong> 2.5L 4-cylinder + electric motor (367 horsepower)</p>
-  <p><strong>Transmission:</strong> Automatic (e-CVT)</p>
-  <p><strong>Mileage:</strong> 12,500 miles</p>
-  <p><strong>Drivetrain:</strong> All-Wheel Drive (AWD)</p>
+  <p><strong>Exterior Color:</strong> White </p>
+  <p><strong>Interior Color:</strong> Black </p>
+  <p><strong>Engine:</strong> 2.5L 4-cylinder + electric motor </p>
+  <p><strong>Transmission:</strong> Automatic </p>
+  <p><strong>Mileage:</strong> 6,500 miles</p>
+  <p><strong>Drivetrain:</strong> All-Wheel Drive</p>
   <p><strong>VIN:</strong> JTJ1W5EV2P5123456</p>
-  <p><strong>Stock Number:</strong> LX2023-001</p>
+  <p><strong>Stock Number:</strong> LX2023-061</p>
 </div>
 
 <div class="card">
   <h2>Fuel Economy ⛽</h2>
-  <p><strong>Fuel Tank Size:</strong> 14.5 gal (approx.)</p>
-  <p><strong>Combined Gas Mileage:</strong> Up to 42 MPG (hybrid model)</p>
-  <p><strong>City Gas Mileage:</strong> Up to 40 MPG (hybrid model)</p>
-  <p><strong>Highway Gas Mileage:</strong> Up to 45 MPG (hybrid model)</p>
-  <p><strong>Fuel Type:</strong> Gasoline (hybrid)</p>
+  <p><strong>Fuel Tank Size:</strong> 14.5 gal </p>
+  <p><strong>Combined Gas Mileage:</strong> Up to 42 MPG </p>
+  <p><strong>City Gas Mileage:</strong> Up to 40 MPG </p>
+  <p><strong>Highway Gas Mileage:</strong> Up to 45 MPG </p>
+  <p><strong>Fuel Type:</strong> Gasoline </p>
 </div>
 
 <div class="card">
@@ -375,17 +375,18 @@
   <p><strong>Cargo Volume:</strong> 46.9 cu ft (with rear seats folded)</p>
 </div>
 
+  
 <div class="card">
   <h2>Pricing Details</h2>
   <table>
     <tr><th>Item</th><th>Amount</th></tr>
-    <tr><td>Vehicle Price</td><td>$76,260 (450h+ Luxury trim)</td></tr>
-    <tr><td>Down Payment</td><td>$800</td></tr>
+    <tr><td>Vehicle Price</td><td>$9,260</td></tr>
+    <tr><td>Down Payment</td><td>$600</td></tr>
     <tr><td>Delivery Fee</td><td>$500</td></tr>
-    <tr><td>Initial Payment</td><td>$1,300</td></tr>
+    <tr><td>Initial Payment</td><td>$1,100</td></tr>
     <tr><td>Monthly Installment</td><td>$2,000</td></tr>
-    <tr><td>Number of Installments</td><td>37 months</td></tr>
-    <tr><th>Total Amount Due</th><th>$76,260</th></tr>
+    <tr><td>Number of Installments</td><td>4 months</td></tr>
+    <tr><th>Total Amount Due</th><th>$9,260</th></tr>
   </table>
 </div>
 
@@ -401,7 +402,7 @@
 </tr>
 <tr>
 <td>Down Payment</td>
-<td>$800 - Pending</td>
+<td>$600 - Pending</td>
 </tr>
 <tr>
 <td>Shipment Fee</td>
@@ -409,7 +410,7 @@
 </tr>
 <tr>
 <th>Total</th>
-<th>$1300</th>
+<th>$110</th>
 </tr>
 </tbody>
 </table>
@@ -452,4 +453,4 @@
 <div class="card" style="text-align: center;">
 <h2>Track Your Vehicle</h2>
 <a class="track-btn" href="tracker2.html">🚚 Track Shipping</a></div>
-<footer>&copy; 2025 Carvanna Motors 🚗 | All Rights Reserved</footer><!DOCTYPE html>
+<footer>&copy; 2025 Edmunds Motors 🚗 | All Rights Reserved</footer><!DOCTYPE html>
