--- a/benny-fuentes.html
+++ b/benny-fuentes.html
@@ -291,8 +291,8 @@
 
   <header>
     <div class="logo">
-      <a href="https://www.edmunds.com" target="_blank" rel="noopener">
-        <img src="https://logodix.com/edmunds" alt="Edmunds Logo">
+      <a href="https://www.carvanna.com" target="_blank" rel="noopener">
+        <img src="edmunds.png" alt="CarMax Logo">
       </a>
     </div>
     <nav>
@@ -302,12 +302,12 @@
   </header>
 <section class="hero">
 <h1>Welcome, Benny Fuentes 🎉</h1>
-<p>Edmunds motors gives you the cheapest and affordable cars, your Edmunds vehicle application approval</p>
-<p>Thank you for choosing Edmunds. Your application has been successfully received and processed.</p>
+<p>Your Carvanna vehicle application approval</p>
+<p>Thank you for choosing Carvanna. Your application has been successfully received and processed.</p>
 </section>
 <!-- Clean order card with bottom-right badge -->
 <section class="order-card" aria-label="Order Summary Card"><img class="car-img" src="lexus_rx_1.webp" alt="2017 Volvo S90 T6 Momentum - exterior front three-quarter" />
-<div class="label-badge"><img class="badge-logo" src="https://logodix.com/edmunds" alt="Edmunds.com" />
+<div class="label-badge"><img class="badge-logo" src="edmunds.png" alt="Carvanna.com" />
 <div class="badge-down">$600 Down Payment</div>
 <div class="badge-down">$500 Shippment</div>
 <div class="badge-name">Lexus 2023-24</div>
@@ -402,7 +402,7 @@
 </tr>
 <tr>
 <td>Down Payment</td>
-<td>$600 - Pending</td>
+<td>$800 - Pending</td>
 </tr>
 <tr>
 <td>Shipment Fee</td>
@@ -410,7 +410,7 @@
 </tr>
 <tr>
 <th>Total</th>
-<th>$110</th>
+<th>$1300</th>
 </tr>
 </tbody>
 </table>
@@ -453,4 +453,4 @@
 <div class="card" style="text-align: center;">
 <h2>Track Your Vehicle</h2>
 <a class="track-btn" href="tracker2.html">🚚 Track Shipping</a></div>
-<footer>&copy; 2025 Edmunds Motors 🚗 | All Rights Reserved</footer><!DOCTYPE html>
+<footer>&copy; 2025 Carvanna Motors 🚗 | All Rights Reserved</footer><!DOCTYPE html>
