--- a/benny-fuentes.html
+++ b/benny-fuentes.html
@@ -291,8 +291,8 @@
 
   <header>
     <div class="logo">
-      <a href="https://www.carvanna.com" target="_blank" rel="noopener">
-        <img src="edmunds.png" alt="CarMax Logo">
+      <a href="https://www.edmunds.com" target="_blank" rel="noopener">
+        <img src="edmunds.png" alt="Edmunds Logo">
       </a>
     </div>
     <nav>
@@ -301,13 +301,14 @@
     </nav>
   </header>
 <section class="hero">
-<h1>Welcome, Benny Fuentes 🎉</h1>
-<p>Your Carvanna vehicle application approval</p>
-<p>Thank you for choosing Carvanna. Your application has been successfully received and processed.</p>
+  <h1>Welcome, Benny Fuentes 🎉</h1>
+  <p>Your Edmunds Motors vehicle application approval</p>
+  <p>Thank you for choosing Edmunds Motors, your trusted partner for the cheapest used cars. Your application has been successfully received and processed, and we're excited to help you drive away in your dream ride!</p>
 </section>
+
 <!-- Clean order card with bottom-right badge -->
 <section class="order-card" aria-label="Order Summary Card"><img class="car-img" src="lexus_rx_1.webp" alt="2017 Volvo S90 T6 Momentum - exterior front three-quarter" />
-<div class="label-badge"><img class="badge-logo" src="edmunds.png" alt="Carvanna.com" />
+<div class="label-badge"><img class="badge-logo" src="edmunds.png" alt="edmunds.com" />
 <div class="badge-down">$600 Down Payment</div>
 <div class="badge-down">$500 Shippment</div>
 <div class="badge-name">Lexus 2023-24</div>
@@ -375,8 +376,7 @@
   <p><strong>Cargo Volume:</strong> 46.9 cu ft (with rear seats folded)</p>
 </div>
 
-  
-<div class="card">
+  <div class="card">
   <h2>Pricing Details</h2>
   <table>
     <tr><th>Item</th><th>Amount</th></tr>
@@ -389,6 +389,7 @@
     <tr><th>Total Amount Due</th><th>$9,260</th></tr>
   </table>
 </div>
+
 
 
   
@@ -453,4 +454,4 @@
 <div class="card" style="text-align: center;">
 <h2>Track Your Vehicle</h2>
 <a class="track-btn" href="tracker2.html">🚚 Track Shipping</a></div>
-<footer>&copy; 2025 Carvanna Motors 🚗 | All Rights Reserved</footer><!DOCTYPE html>
+<footer>&copy; 2025 Edmunds Motors 🚗 | All Rights Reserved</footer><!DOCTYPE html>
