--- a/benny-fuentes.html
+++ b/benny-fuentes.html
@@ -64,7 +64,7 @@
     .hero {
       text-align: center;
       padding: 3rem 1rem;
-      background: var(--primary);
+      background: blue;
       color: white;
     }
 
