--- a/grant edit.html
+++ b/grant edit.html
@@ -7,12 +7,98 @@
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
 <style>
-    body { font-family: Arial, sans-serif; background:                          
-    .container { max-width: 500px; margin: auto; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 0 15px rgba(0,0,0,0.1); }
-    input { width: 100%; margin: 10px 0; padding: 10px; border-radius: 6px; border: 1px solid        
-    button { width: 100%; background-color:                                                                                           
-    button:hover { background-color:           
-    h2 { text-align: center; }
+    body {
+  font-family: Arial, sans-serif;
+  background: #f5f5f5;
+  padding: 20px;
+}
+
+.container {
+  max-width: 500px;
+  margin: auto;
+  background: white;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+}
+
+input {
+  width: 100%;
+  margin: 10px 0;
+  padding: 10px;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+}
+
+button {
+  width: 100%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+
+button:hover {
+  background-color: #45a049;
+}
+
+h2 {
+  text-align: center;
+}
+
+#users-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+#users-list li {
+  padding: 10px;
+  border-bottom: 1px solid #ccc;
+}
+
+#users-list li:last-child {
+  border-bottom: none;
+}
+
+#users-list button {
+  width: auto;
+  padding: 5px 10px;
+  margin-left: 10px;
+}
+
+#update-btn {
+  background-color: #2196F3;
+}
+
+#update-btn:hover {
+  background-color: #1976D2;
+}
+
+#submit-btn {
+  background-color: #4CAF50;
+}
+
+#submit-btn:hover {
+  background-color: #45a049;
+}
+
+.error-message {
+  color: red;
+  font-size: 12px;
+  margin-bottom: 10px;
+}
+
+.success-message {
+  color: green;
+  font-size: 12px;
+  margin-bottom: 10px;
+}
+
   </style>
 </head>
 <body>
