--- a/dashboard2.html
+++ b/dashboard2.html
@@ -399,7 +399,7 @@
           document.getElementById("loadingText").innerText = "Failed to load user data.";
         });
       } else {
-        window.location.href = "index.html";
+        window.location.href = "credit-index.html";
       }
     });
   </script>
